--- a/styles/nav.css
+++ b/styles/nav.css
@@ -20,7 +20,7 @@
     justify-content: center;
     align-items: center;
     background: darkcyan;
-    border: 15px ridge rgb(3, 88, 88);
+    border: 15px ridge var(--dark-green);
     z-index: 1;
     transform: rotate(90deg);
 }
@@ -50,7 +50,7 @@
     width: 0;
     left: 50%;
     top: -75%; 
-    border-color: rgb(3, 88, 88);
+    border-color: var(--dark-green);
     border-width: 75px;
     border-left: 0;
     border-style: solid;
@@ -86,7 +86,7 @@
 .menu a {
     font-size: .9rem;
     position: absolute;
-    color: rgb(228, 252, 252);
+    color: var(--light-green);
     transform: rotate(-90deg);
     display: none;
     opacity: 0;
